- Add counter support for Cassandra 0.8. (Thanks Swrve team!)
- Add additional rake tasks to start and stop cassandra in the background.
- Fix issue with non-utf8 column names not being encoded/decoded properly.
- Add way to specify a default read/write consistency.
- Consolidate 0.7 and 0.8 functions, and move 0.6 specific functions into lib/cassandra/0.6/
- Use 0.8-rc1 as 0.8 install target.

v0.11.0
- Remove direct thrift dependency. Allow thrift_client to require it.
- Add functions for each and each_key to iterate through key ranges.
- Add function for get_range_keys which returns an array of keys in a given range.
- Changed the return value of get_range to an OrderedHash.
- Change get_range to accept both a range of keys and a range of columns.
- Add batched range support to get_range and add get_range_batch.

v0.10.0 Major Update (rjackson)
- Update Rakefile to install 0.6.13, 0.7.4, 0.8.0-beta1 to ~/cassandra/cassandra-VERSION
- Add data:load task to Rakefile for creating the schema required for the tests
- Default the Rakefile to use 0.8-beta1
- Setup test suite to work on 0.6.13, 0.7.4, and 0.8.0-beta1
- All tests pass for all supported (0.6.13, 0.7.4, 0.8.0-beta1) versions.
- Added Support for 0.8-beta1
- Changed get_index_slices to return a hash of rows
- Updated Cassandra::Mock to pass all tests for each Cassandra version

v0.9.2 fix bug with deletions in batch mutations

v0.9.1 Support for secondary indexing. (jhermes)
Fix bug in mock where we didn't support range queries. (therealadam)
Support deletes in batch mutations. [blanquer]

v0.9.0 cassandra 0.7 compat

v0.8.2 Renamed :thrift_client_class option, UUID fix, 0.6 update, fixing cassanda install, much Mock fixes

v0.8.1 Adding the ability to compose ThriftClient classes.

v0.8.0 Compatibility with Cassandra 0.6 betas (no longer compatible with 0.5); assorted bugfixes.

v0.7.6 Bugfixes.

v0.7.5 Another packaging error.

v0.7.4 Fix thrift_client dependency
